--- a/store/src/main/vue/package.json
+++ b/store/src/main/vue/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "datatables.net-dt": "^2.2.2",
+    "datatables.net-vue3": "^3.0.4",
+    "fireworks-js": "^2.10.8",
     "vue": "^3.5.13",
+    "vue-fortune-wheel": "^2.1.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "eslint": "^9.24.0",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
